Fixed burger menu spacing

--- a/home.css
+++ b/home.css
@@ -178,9 +178,9 @@
   width: 100%;
   display: flex;
   max-width: var(--dl-size-size-maxcontent);
-  margin-top: var(--dl-space-space-fiveunits);
+  margin-top: var(--dl-space-space-twounits);
   align-items: center;
-  padding-top: var(--dl-space-space-tenunits);
+  padding-top: var(--dl-space-space-fiveunits);
   padding-left: var(--dl-space-space-tripleunit);
   margin-bottom: var(--dl-space-space-fiveunits);
   padding-right: var(--dl-space-space-tripleunit);
